@@ -101,8 +101,8 @@
 //#include <gsl/gsl_rng.h>
 #include "rngR.h"
 
-#include "smc-exception.hh"
-#include "sampler.hh"
+#include "smc-exception.h"
+#include "sampler.h"
 
 /// The Sequential Monte Carlo namespace
 
